--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,3 +9,5 @@ on:
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+  build-no-sc:
+    uses: mannkind/zmk/.github/workflows/build-user-config.yml@no-sc-patch
