--- a/config/west.yml
+++ b/config/west.yml
@@ -2,11 +2,11 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: splitencoder
-      url-base: https://github.com/infused-kim
+    - name: urob
+      url-base: https://github.com/urob
   projects:
     - name: zmk
-      remote: splitencoder
+      remote: urob
       revision: main
       import: app/west.yml
   self:
