--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,8 @@ include:
     shield: sofle_left nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter nice_view
+  # Corax56
+  - board: nice_nano_v2
+    shield: corax56_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: corax56_right nice_view_adapter nice_view
