--- a/build.yaml
+++ b/build.yaml
@@ -11,14 +11,14 @@ include:
 
   # Solfe Dongle 2.0w
   - board: nice_nano_v2
-    shield: sofle_dongle nice_view_adapter nice_view
+    shield: sofle_dongle nice_view
   - board: nice_nano_v2
-    shield: sofle_dongle_left nice_view_adapter nice_view
+    shield: sofle_dongle_left nice_view
   - board: nice_nano_v2
-    shield: sofle_dongle_right nice_view_adapter nice_view
+    shield: sofle_dongle_right nice_view
 
   # Corax56
   - board: nice_nano_v2
-    shield: corax56_left nice_view_adapter nice_view
+    shield: corax56_left nice_view
   - board: nice_nano_v2
-    shield: corax56_right nice_view_adapter nice_view
+    shield: corax56_right nice_view
