Disable zmk display on dongle

--- a/config/boards/shields/sofle_dongle/sofle_dongle_base.dtsi
+++ b/config/boards/shields/sofle_dongle/sofle_dongle_base.dtsi
@@ -57,6 +57,8 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
     };
 };
 
+#if !SHIELD_SOFLE_DONGLE
+
 &pinctrl {
     spi0_default: spi0_default {
         group1 {
@@ -86,3 +88,5 @@ nice_view_spi: &spi0 {
 &pro_micro_i2c {
     status = "disabled";
 };
+
+#endif
