--- a/build.yaml
+++ b/build.yaml
@@ -11,7 +11,7 @@ include:
 
   # Solfe Dongle 2.0w
   - board: nice_nano_v2
-    shield: sofle_dongle nice_view
+    shield: sofle_dongle
   - board: nice_nano_v2
     shield: sofle_dongle_left nice_view
   - board: nice_nano_v2
