--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,4 @@ on:
 jobs:
   build:
     #uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-    uses: urob/zmk/.github/workflows/build-user-config.yml@build-with-submodules
+    uses: zmkfirmware/unified-zmk-config-template/blob/main/.github/workflows/build.yml
