--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,4 +8,4 @@ on:
 
 jobs:
   build:
-    uses: zmkfirmware/unified-zmk-config-template/blob/main/.github/workflows/build.yml@main
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
