--- a/build.yaml
+++ b/build.yaml
@@ -3,19 +3,21 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
 
+  # Solfe 2.0w Dongle
+  - board: nice_nano_v2
+    shield: sofle_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+
   # Solfe 2.0w
   - board: nice_nano_v2
     shield: sofle_left nice_view_adapter nice_view
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: nice_nano_v2
+    shield: sofle_left nice_view_adapter nice_view
+    artifact-name: sofle_left_central_nice_view_adapter_nice_view
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter nice_view
-
-  # Solfe Dongle 2.0w
-  - board: nice_nano_v2
-    shield: sofle_dongle
-  - board: nice_nano_v2
-    shield: sofle_dongle_left nice_view
-  - board: nice_nano_v2
-    shield: sofle_dongle_right nice_view
 
   # Corax56
   - board: nice_nano_v2
