--- a/.github/workflows/build-corax56.yml
+++ b/.github/workflows/build-corax56.yml
@@ -1,9 +1,10 @@
-name: Build Firmware (Sofle Dongle)
+name: Build Firmware (Corax56)
 
 on:
-  push:
   workflow_dispatch:
 
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    with:
+      build_matrix_path: build-corax56.yaml
